//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Account {
  id String [pk]
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_in Int
  ext_expires_in Int
  refresh_token_expires_in Int
  token_type String
  scope String
  id_token String
  session_state String
  user User [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table Session {
  id String [pk]
  sessionToken String [unique, not null]
  userId String [not null]
  expires DateTime [not null]
  user User [not null]
}

Table User {
  id String [pk]
  name String
  email String [unique, not null]
  emailVerified DateTime
  image String
  accounts Account [not null]
  sessions Session [not null]
  dashboards Dashboard [not null]
}

Table VerificationToken {
  identifier String [not null]
  token String [unique, not null]
  expires DateTime [not null]

  indexes {
    (identifier, token) [unique]
  }
}

Table Dashboard {
  id String [pk]
  name String [not null]
  description String
  published Boolean [not null]
  version Int [not null, default: 1]
  dashboardIterations DashboardIteration [not null]
  thumbnailPath String [not null]
  grafanaJSON Json [not null]
  grafanaUrl String
  columns Int [not null, default: 2]
  tags String[] [not null]
  user User [not null]
  userId String [not null]
  panels Panel [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table DashboardIteration {
  id String [pk]
  version Int [not null, default: 1]
  grafanaJSON Json [not null]
  dashboard Dashboard [not null]
  dashboardId String [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table Panel {
  id String [pk]
  name String [not null]
  description String
  thumbnailPath String [not null]
  grafanaJSON Json [not null]
  grafanaUrl String
  width Int [not null, default: 1]
  position Int [not null, default: 1]
  type String [not null]
  properties Json
  dashboard Dashboard [not null]
  dashboardId String [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Ref: Account.userId > User.id [delete: Cascade]

Ref: Session.userId > User.id [delete: Cascade]

Ref: Dashboard.userId > User.id [delete: Cascade]

Ref: DashboardIteration.dashboardId > Dashboard.id [delete: Cascade]

Ref: Panel.dashboardId > Dashboard.id [delete: Cascade]